fdo#78054: Initialize drawing layer when the document contains notes.

Don't be fooled even when the document doesn't have a drawing layer
initialized.  Sometimes a note creates caption on demand later, but if
the drawing layer isn't there the caption will not get created, which
ultimately causes this crash.

Change-Id: I37f4902fa84de91c9f793dc352127d9345a725e3